Downgraded java to 17 Added CI pipeline for pushing artifacts to Maven Central on release